yamls/httproute-example.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: httproute-example
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-example
  namespace: httproute-example
  labels:
    app: nginx-example
spec:
  containers:
    - name: nginx
      image: nginx:stable
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-example
  namespace: httproute-example
spec:
  selector:
    app: nginx-example
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-example
  namespace: httproute-example
spec:
  parentRefs:
    - name: default
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - "nginx-example.seungdobae.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx-example
          port: 80
